<resources>
    <string name="app_name">E-care</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="blue_name">blue</string>
    <!-- ReportPatient.java -->
    <dimen name="textsize">6dp</dimen>

    <string name="patient_report">Report</string>
    <string name="hint_email">Email</string>
    <string name="hint_title">Title</string>
    <string name="hint_message">Message</string>
    <string name="btn_send">Send</string>

    <string name="err_msg_email">Enter the valid email</string>
    <string name="err_msg_title">Emtpy title</string>
    <string name="err_msg_message">Emtpy message</string>

    <!-- Time.java -->
    <string name="patient_list">Patient List</string>

    <!--login-->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="qrtext">QR code login</string>

    <!--appointment list + take med-->
    <string name="one">ONE</string>
    <string name="two">TWO</string>
    <string name="title_activity_scrollable_tabs">Scrollable Tabs</string>
    <string name="title_activity_simple_tabs">Simple Tabs</string>
    <string name="btn_simple_tabs">Simple Tabs</string>
    <string name="btn_scrollable_tabs">Scrollable Tabs</string>
    <string name="btn_icon_text_tabs">Icon &amp; Text Tabs</string>
    <string name="btn_icon_tabs">Only Icon Tabs</string>
    <string name="btn_pinned_top_tabs">Pinned To Top Tabs</string>
    <string name="title_activity_icon_text_tabs">Icon and Text Tabs</string>
    <string name="title_activity_icon_tabs">Icon Tabs</string>
    <string name="btn_custom_icon_tabs">Custom View Icon &amp; Text</string>
    <string name="title_activity_custom_view_icon_text_tabs">Custom View Icon &amp; Text</string>
    <string name="title_activity_pinned_top_tabs">Pin Top Tabs</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- ALarm Part -->
    <color name="holo_blue_light">#ff33b5e5</color>

    <!-- Math Alarm Activity -->
    <string name="title_activity_set_alarms">Set Alarm</string>
    <string name="no_alarms">No alarms have been set</string>

    <string name="button_new">New</string>

    <!-- Menu -->
    <string name="menu_item_new">New</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_delete">Cancel</string>
    <string name="menu_item_rate">Rate on Google Play</string>
    <string name="menu_item_website">Website</string>
    <string name="menu_item_report">Report a Bug</string>

    <!-- Alert -->
    <string name="_0">0</string>
    <string name="_1">Yes</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="decimal_button_text">No</string>
    <string name="clear_button_text">Clear</string>
    <string name="minus_button_text">-</string>


    <color name="title_background_color">#000000</color>

    <string name="button_delete">Delete</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
