<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:src="@drawable/ecare"
        android:adjustViewBounds="false" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >


        <!--<EditText-->
            <!--android:id="@+id/email"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:hint="@string/hint_email"-->
            <!--android:inputType="textEmailAddress"-->
            <!--android:padding="10dp"-->
            <!--android:singleLine="true"-->
            <!--android:textColor="@color/input_login"-->
            <!--android:textColorHint="@color/input_login_hint" />-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textAutoComplete"
                android:singleLine="true"
                android:padding="10dp"
                android:hint="@string/hint_username"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"/>
        </android.support.design.widget.TextInputLayout>



        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_login_bg"
            android:text="@string/btn_login"
            android:textColor="@color/btn_login" />

        <!-- Link to Login Screen -->

        <!--<Button-->
            <!--android:id="@+id/btnLinkToRegisterScreen"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="40dip"-->
            <!--android:background="@null"-->
            <!--android:text="@string/btn_link_to_register"-->
            <!--android:textAllCaps="false"-->
            <!--android:textColor="@color/white"-->
            <!--android:textSize="15dp" />-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Button"
            android:id="@+id/qrbutton"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</LinearLayout>